<resources>
    <string name="app_name">openlmis-stock</string>
    <string name="title_activity_stock_list">Stock Control</string>
    <string name="stock_received">Received</string>
    <string name="stock_issued">Issued</string>
    <string name="stock_take">Stocktake</string>
    <string name="view_history">View History</string>
    <string name="stock_planning">Stock Planning</string>
    <string name="search">Search</string>
    <string name="expand_all">Expand All</string>
    <string name="collapse_all">Collapse All</string>
    <string name="commodity_type_formatter">%1s (%2$d)</string>
    <string name="dose_formatter">%1d %2s</string>
    <string name="lot_formatter">%1d lots</string>
    <string name="dispensable_formatter">%1d %2s</string>
    <string name="expiring">Expiring</string>
    <string name="stock_details_title">Stock Control -> %2s</string>
    <string name="lots_details">Lots (%1$d)</string>
    <string name="transaction_record">Transaction record</string>
    <string name="stock_adjustment">Loss/Adjust</string>
    <string name="stock_on_hand">Stock on hand:</string>
    <string name="stock_last_updated">Last updated: %1s</string>
    <string name="lot_code_and_expiry">Lot code and expiry date</string>
    <string name="vials_received">Vials received</string>
    <string name="lot_stock_on_hand">Stock on hand</string>
    <string name="status">Status</string>
    <string name="lotcode_and_expiry">%1s Exp. %2s</string>
    <string name="date">Date</string>
    <string name="to_from">To/From</string>
    <string name="lot_code">Lot code</string>
    <string name="stock_issues">Issues</string>
    <string name="balance">Balance</string>
    <string name="stock_balance">%1d %2s, %3d %4s</string>
    <string name="stock_adj">Loss/Adj</string>
    <string name="previous">Previous</string>
    <string name="review">Review</string>
    <string name="next">Next</string>
    <string name="quantity">Quantity</string>
    <string name="add_lot">Add Lot</string>
    <string name="issued_dose_formatter">%1d %2s, %3d doses will be issued</string>
    <string name="received_dose_formatter">%1d %2s, %3d doses will be received</string>
    <string name="items">Items</string>
    <string name="issue_to">Issue To</string>
    <string name="received_from">Receive From</string>
    <string name="reason">Reason</string>
    <string name="stock_issued_more_balance">Stock being Issued %1d is more than Stock on Hand %1d</string>
    <string name="physical_count">Physical count</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="difference">Difference</string>
    <string name="adjusted_lots_formatter">%1d %2s adjusted</string>
    <string name="quantity_to_large">Quantity is too large</string>
    <string name="stock_take_search">Search trade items, commodity types</string>

    <plurals name="adjusted_lots">
        <item quantity="one">%1d lot is adjusted</item>
        <item quantity="other">%1d lots are adjusted</item>
    </plurals>

    <string name="stock_take_lot">%1s \nExp. %2s</string>
    <string name="no_change">No Change</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="save_as_draft">Save as draft</string>
    <string name="stock_take_adjustment">Total: %1d %2s. Difference: %3$s</string>
    <string name="stock_take_no_adjustment">Total: %1d %2s. No adjustment</string>
    <string name="adjustment_summary">%1d/%2d items adjusted</string>
    <string name="last_adjustment">Last update of draft: %1s</string>
    <string name="save_in_progress">Saving stock take</string>

    <string name="physical_inventory">Physical Inventory</string>
    <string name="physical_count_invalid">PhysicalCount is not a number</string>
    <string name="identifier">identifier</string>
    <string name="orderable_id">orderableId</string>
    <string name="vvm_status">vvmStatus</string>
    <string name="facility_id">openlmisFacilityId</string>
    <string name="location_id">locationId</string>
    <string name="team_id">teamId</string>
    <string name="team_name">team</string>

    <string name="stock_adjust_more_balance">Stock being Adjusted %1d is more than Stock on Hand %1d</string>

</resources>
