<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="@dimen/lots_padding"
        android:text="@string/lot_code_and_expiry"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:padding="@dimen/lots_padding"
        android:text="@string/lot_stock_on_hand"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:padding="@dimen/lots_padding"
        android:text="@string/status"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>