<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/trade_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/stock_on_hand"
        app:layout_constraintHorizontal_weight="2.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/stock_on_hand"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/transparent"
        app:layout_constraintEnd_toStartOf="@id/lot_quantity"
        app:layout_constraintHorizontal_weight="1.6"
        app:layout_constraintStart_toEndOf="@id/trade_item"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/stock_on_hand_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/stock_on_hand"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lot_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/edit_text_background"
        app:layout_constraintEnd_toStartOf="@id/no_change"
        app:layout_constraintHorizontal_weight="1.6"
        app:layout_constraintStart_toEndOf="@id/stock_on_hand"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/quantity_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/physical_count"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/subtract_stock"
        style="@style/Lot.Add.Subtract.StockTake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintEnd_toStartOf="@id/add_stock"
        app:layout_constraintStart_toEndOf="@id/lot_quantity"
        app:layout_constraintTop_toTopOf="@id/lot_quantity" />

    <TextView
        android:id="@+id/add_stock"
        style="@style/Lot.Add.Subtract.StockTake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/subtract_stock"
        app:layout_constraintTop_toTopOf="@id/lot_quantity" />

    <TextView
        android:id="@+id/no_change"
        style="@style/Lot.Add.Subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_change"
        app:layout_constraintBottom_toBottomOf="@id/lot_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lot_quantity"
        app:layout_constraintTop_toBottomOf="@id/subtract_stock" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/adjustment"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:boxBackgroundColor="@color/transparent"
        app:layout_constraintEnd_toEndOf="@id/stock_on_hand"
        app:layout_constraintStart_toStartOf="@id/stock_on_hand"
        app:layout_constraintTop_toBottomOf="@id/stock_on_hand">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/adjustment_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/difference" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reason"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:boxBackgroundColor="@color/edit_text_background"
        app:layout_constraintEnd_toEndOf="@id/add_stock"
        app:layout_constraintStart_toStartOf="@id/lot_quantity"
        app:layout_constraintTop_toBottomOf="@id/lot_quantity">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reason_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/abc_spinner_mtrl_am_alpha"
            android:focusable="false"
            android:hint="@string/reason" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lot_status"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/edit_text_background"
        app:layout_constraintEnd_toEndOf="@id/stock_on_hand"
        app:layout_constraintStart_toStartOf="@id/stock_on_hand"
        app:layout_constraintTop_toBottomOf="@id/adjustment">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/status_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/abc_spinner_mtrl_am_alpha"
            android:focusable="false"
            android:hint="@string/status" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="@dimen/bottom_navigation_margin"
        android:layout_marginTop="@dimen/bottom_navigation_margin"
        android:background="@drawable/save_border"
        android:enabled="false"
        android:minHeight="0dp"
        android:paddingBottom="5dp"
        android:paddingEnd="@dimen/bottom_navigation_padding"
        android:paddingStart="@dimen/bottom_navigation_padding"
        android:paddingTop="5dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/save_disabled"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/lot_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>