<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_horizontal_separator"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/lot_margin"
        android:layout_weight="5"
        app:boxBackgroundColor="@color/edit_text_background">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lot_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/abc_spinner_mtrl_am_alpha"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/lot_code_and_expiry" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/lot_margin"
        android:layout_weight="2"
        app:boxBackgroundColor="@color/edit_text_background">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/lot_margin"
        android:layout_weight="2"
        app:boxBackgroundColor="@color/edit_text_background">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/status_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/abc_spinner_mtrl_am_alpha"
            android:focusable="false"
            android:hint="@string/status" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>